mobile off-center fixed

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ body {
     -ms-overflow-style: none;    /* IE 10+ */
 }
 
+main {
+    width: 100%;
+}
+
 p {
     margin-top: 0px;
     margin-bottom: 10px;
@@ -52,7 +56,7 @@ p {
     background-color: var(--medium-blue);
     /* background-color: #133367; */
     /* height: 60px; */
-    margin-left: 0px;
+    /* margin-left: 0px; */
     align-items: center;
     display: none;
     flex-direction: row;
@@ -118,8 +122,9 @@ p {
 }  */
 
 .container {
-    margin-left: 10%;
-    margin-right: 10%;
+    /* margin-left: 10%;
+    margin-right: 10%; */
+    margin:auto;
     margin-top: 50px;
     text-align: center;
     justify-content:center ;
